<resources>
    <string name="app_name">맵필로그</string>

    <string name="title_sign_in">맵필로그, 기억의 시작</string>

    <string name="common_start">시작하기</string>
    <string name="common_start_time">시작</string>
    <string name="common_end_time">종료</string>
    <string name="common_okay">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_nickname">닉네임</string>
    <string name="common_update">업데이트</string>

    <!-- 바텀 네비 -->
    <string name="navi_home">홈</string>
    <string name="navi_calender">캘린더</string>
    <string name="navi_meet">모임</string>
    <string name="navi_memorize">기록</string>
    <string name="navi_mypage">MY</string>

    <!-- 홈 -->
    <string name="home_tab_today">오늘의 일정</string>
    <string name="home_tab_upcoming">다가오는 일정</string>
    <string name="home_today_empty">오늘은 등록된 일정이 없어요</string>
    <string name="home_upcoming_empty">다가오는 일정이 없어요</string>
    <string name="home_add_schedule">아래 버튼을 눌러 일정을 추가해 보세요!</string>
    <string name="add_schedule_btn">일정 추가하기</string>
    <string name="marked">마크한 기록</string>

    <string name="calendar_current_year_month">%d년 %d월</string>

    <!-- 권한 요청하기 -->
    <string name="request_permission_title">앱 서비스 접근 권한을\n허용해 주세요</string>
    <string name="request_permission_alarm_title">알림</string>
    <string name="request_permission_alarm_content">미리 알림 및 공지사항의 푸시 알림</string>
    <string name="request_permission_photo_title">사진</string>
    <string name="request_permission_photo_content">기록 작성 시 업로드할 사진 접근</string>
    <string name="request_permission_camera_title">카메라</string>
    <string name="request_permission_camera_content">촬영 후 사진 업로드</string>
    <string name="request_permission_location_title">위치</string>
    <string name="request_permission_location_content">현재 위치에서 기록 검색</string>
    <string name="request_permission_grant_and_start">허용하고 시작하기</string>

    <!-- 회원가입 결과 -->
    <string name="sign_up_result_title">맵필로그에 오신 걸 환영해요!</string>
    <string name="sign_up_result_subtitle">3초 뒤에 홈으로 이동할게요</string>

    <!-- 일정 추가하기 -->
    <string name="add_todo_title_hint">일정 제목을 적어 주세요</string>
    <string name="add_todo_color">색상</string>
    <string name="add_todo_add_location">장소 추가하기</string>
    <string name="add_todo_alarm">알림</string>
    <string name="add_todo_repeat">반복</string>
    <string name="add_todo_delete_location">삭제하기</string>
    <string name="add_todo_check_delete_location">선택삭제</string>
    <string name="add_todo_check_cancel_location">선택취소</string>

    <string name="add_todo_search_location_search">장소 검색</string>

    <string name="add_todo_set_time_remove_time">시간삭제</string>

    <!-- 일정 알림 -->
    <string name="add_todo_from_start_date">시작일 기준</string>
    <string name="add_todo_alarm_list">알림 리스트</string>

    <!-- MY -->
    <string name="my_user_nickname">%s 님</string>
    <string name="my_version_info_title">버전정보</string>
    <string name="my_version_info_version">%s / %s</string>

    <!-- 프로필 편집 -->
    <string name="change_profile_toolbar_title">프로필 편집</string>
    <string name="change_profile_change_photo">사진 편집</string>
    <string name="change_profile_login_account">로그인 계정</string>

    <!-- 탈퇴하기 -->
    <string name="sign_out_toolbar_title">탈퇴하기</string>
    <string name="sign_out_toolbar_skip">건너뛰기</string>
    <string name="sign_out_title">탈퇴하는 이유가 있나요?</string>
    <string name="sign_out_subtitle">더 좋은 서비스를 만드는 데에 참고할게요</string>
    <string name="sign_out_complete">제출하기</string>

    <!-- 알림 설정 -->
    <string name="notification_setting_toolbar_title">알림 설정</string>
    <string name="notification_setting_accept_notification">알림 받기</string>
    <string name="notification_setting_notice">공지사항 알림</string>
    <string name="notification_setting_todo">일정 미리 알림</string>
    <string name="notification_setting_marketing">마케팅 알림</string>

    <!-- 문의하기 -->
    <string name="inquire_toolbar_title">문의하기</string>
    <string name="inquire_title">여러분의 이야기를 기다려요</string>
    <string name="inquire_subtitle">맵필로그 팀은 여러분의 질문을 언제든지 기다리고 있어요.\n궁금한 점이나 건의할 점, 사소한 의견이라도 맵필로그 팀에게 전해 주세요.</string>
    <string name="inquire_email">mappilogue@naver.com</string>
    <string name="inquire_copy_email">복사하기</string>
    <string name="inquire_toast_copy_email">이메일이 복사되었어요</string>

</resources>