<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.c7z.mappilogue_aos.presentation.ui.inquire.InquireActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inquire_layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="@{() -> activity.finishActivity()}"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inquire_toolbar_title"
                android:textAppearance="@style/Title_02"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/inquire_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/inquire_title"
            android:textAppearance="@style/Title_01"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inquire_layout_toolbar" />

        <TextView
            android:id="@+id/inquire_tv_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/inquire_subtitle"
            app:layout_constraintEnd_toEndOf="@id/inquire_tv_title"
            app:layout_constraintStart_toStartOf="@id/inquire_tv_title"
            app:layout_constraintTop_toBottomOf="@id/inquire_tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/bg_gray15_12"
            app:layout_constraintTop_toBottomOf="@id/inquire_tv_subtitle">

            <ImageView
                android:id="@+id/inquire_iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_inquire_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inquire_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/inquire_email"
                android:textAppearance="@style/Body_02"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/inquire_iv_email"
                app:layout_constraintStart_toEndOf="@id/inquire_iv_email"
                app:layout_constraintTop_toTopOf="@id/inquire_iv_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:onClick="@{() -> activity.onEmailCopyClicked()}"
                android:text="@string/inquire_copy_email"
                android:textAppearance="@style/Body_03"
                android:textColor="@color/green_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>