<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="com.c7z.mappilogue_aos.presentation.ui.sign_out_reason.SignOutReasonActivity" />

        <variable
            name="viewModel"
            type="com.c7z.mappilogue_aos.presentation.ui.sign_out_reason.viewmodel.SignOutReasonViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_out_reason_layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:onClick="@{() -> activity.finishActivity()}"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_toolbar_title"
                android:textAppearance="@style/Title_02"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_toolbar_skip"
                android:textAppearance="@style/Body_02"
                android:textColor="@color/gray_4"
                android:onClick="@{() -> activity.requestSignOut()}"
                android:layout_marginEnd="14dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/sign_out_reason_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_title"
            android:textAppearance="@style/Title_01"
            android:textColor="@color/black"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/sign_out_reason_layout_toolbar"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sign_out_reason_tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_subtitle"
            android:textAppearance="@style/Body_02"
            android:textColor="@color/gray_5"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/sign_out_reason_tv_title"
            app:layout_constraintTop_toBottomOf="@id/sign_out_reason_tv_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sign_out_reason_rv_checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/sign_out_reason_tv_sub_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{(viewModel.liveCheckedItemPositions.empty || viewModel.liveCheckedItemPositions == null) ? false : true}"
            android:onClick="@{() -> activity.requestSignOut()}"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/selector_green1_12"
            app:layout_constraintBottom_toBottomOf="parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_complete"
                android:textAppearance="@style/Body_03"
                android:textColor="@color/white"
                android:layout_marginVertical="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>